--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <title>Cursos de Direito Online | Instituto de Direito Real</title>
 
     <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/header-bs.css">
     <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/responsive.css">
     <link rel="shortcut icon" type="image/png"
         href="assets/logo-sm-ac9756d45bf242e9107d460a712886b922f43bad202665f07d5b4d8d078974af.png">
@@ -18,124 +18,201 @@
     <link rel="stylesheet" href="font-awesome/css/all.css">
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/all.min.css"> -->
     <!-- FONTES -->
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400;700&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400;700&family=Open+Sans:wght@300;400;500;600;700&family=Roboto:wght@100;300;400;500;700&display=swap"
+        rel="stylesheet">
 
     <!-- BOOTSTRAP -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
 </head>
 
 <body>
+    <!-- HEADER -->
     <header>
-        <!-- MENU MOBILE -->
-        <div class="header">
+        <!-- NAVBAR DESKTOP -->
+        <nav
+            class="navbar navbar-expand-lg navbar-dark bg-dark border-bottom pt-4 pb-4 justify-content-between align-items-center d-none d-md-none d-lg-block d-xl-block">
             <div class="container">
-                <nav class="header-images navbar-dark">
+                <a href="/">
+                    <img src="assets/logo-white-fc4f0bc7658764edc2b526700431d61bd79c1036cb4f57459b9c062ecdd6c2d3.svg"
+                        class="header-logo" alt="Direito Real" width="180" height="37">
+                </a>
+
+                <ul class="navbar-nav justify-content-end">
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://forum.direitoreal.com.br">Comunidade Jurídica</a>
+                    </li>
+
+                    <li><a class="nav-link ml-4 rounded" href="http://direitoreal.com.br/login">Entrar</a></li>
+                    <li><a class="btn btn-outline-light ml-4" href="http://direitoreal.com.br/cadastro">Cadastrar</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+        <!-- MENU MOBILE -->
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark pt-4 pb-4 flex-row">
+            <div class="container">
+                <div class="w-100 justify-content-between pb-2 pt-2 d-flex d-sm-flex d-md-flex d-lg-none d-xl-none">
                     <a href="/">
                         <img src="assets/logo-white-fc4f0bc7658764edc2b526700431d61bd79c1036cb4f57459b9c062ecdd6c2d3.svg"
                             class="header-logo" alt="Direito Real" width="180" height="37">
                     </a>
 
-                    <button class="logo-open" type="button" data-toggle="collapse"
-                        data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
+                    <button class="navbar-toggler d-block d-sm-block d-md-block d-lg-none d-xl-none text-white"
+                        type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+                        aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                         <i class="fa fa-bars"></i>
                     </button>
-
-                </nav>
-                <div class="collapse" id="navbarToggleExternalContent">
-                    <div class="bg-darkred">
-                        <ul>
-                            <li><a href="http://direitoreal.com.br/plano-juridico-master">Planos</a></li>
-                            <li class=""><a href="http://direitoreal.com.br/cursos">Cursos</a></li>
-                            <li class=""><a href="http://direitoreal.com.br/professores">Professores</a></li>
-                            <li class="">
-                                <a data-turbolinks="false" href="http://direitoreal.com.br/artigos">Artigos</a>
-                            </li>
-                            <li class="">
-                                <a data-turbolinks="false" href="http://direitoreal.com.br/noticias">Jurisprudência</a>
-                            </li>
-                            <li class=""><a href="http://direitoreal.com.br/peticoes">Petições</a></li>
-                            <li class=""><a href="http://direitoreal.com.br/faq">Contato</a></li>
-
-                            <li class="header-sub-menu-item">
-                                <button class="logo-open" type="button" data-toggle="collapse"
-                                    data-target="#direitoConst" aria-controls="direitoConst" aria-expanded="false"
-                                    aria-label="Toggle navigation">
-                                    Áreas
-                                    <b class="fa fa-chevron-down"></b>
-                                </button>
-
-                                <ul class="collapse" id="direitoConst">
-                                    <li class="header-sub-menu"><a href="/areas/direito-constitucional">Direito
-                                            Constitucional</a></li>
-                                </ul>
-                            </li>
-
-                            <li class=""><a href="https://forum.direitoreal.com.br">Comunidade Jurídica</a></li>
-
-                            <div class="header-actions-container">
-
-                                <li><a class="active" href="http://direitoreal.com.br/login">Entrar</a></li>
-                                <li><a class="btn btn-outline-light"
-                                        href="http://direitoreal.com.br/cadastro">Cadastrar</a></li>
-
-                            </div>
-                        </ul>
-                    </div>
                 </div>
-            </div>
-        </div>
-        <!-- MENU DESKTOP -->
-        <div class="header-desktop">
-            <div class="container">
-                <nav class="header-images d-flex justify-content-between">
-                    <a href="/">
-                        <img src="assets/logo-white-fc4f0bc7658764edc2b526700431d61bd79c1036cb4f57459b9c062ecdd6c2d3.svg"
-                            alt="Direito Real" width="180" height="37">
-                    </a>
-                    <div class="d-flex justify-content-end width-80-porcent">
-                        <ul class="d-flex align-items-center">
-                            <li class="margin-right-40"><a href="https://forum.direitoreal.com.br">Comunidade
-                                    Jurídica</a></li>
-                            <li class="margin-right-40"><a class="active" href="/login">Entrar</a></li>
-                            <li><a class="btn btn-outline-light" href="/cadastro">Cadastrar</a></li>
-                        </ul>
-                    </div>
-                </nav>
-            </div>
-            <!-- SUBMENU -->
-            <div class="border-top">
-                <div class="container">
-                    <ul class="d-flex justify-content-between padding-t-b-20">
-                        <li><a href="http://direitoreal.com.br/plano-juridico-master">Planos</a></li>
-                        <li><a href="http://direitoreal.com.br/cursos">Cursos</a></li>
-                        <li><a href="http://direitoreal.com.br/professores">Professores</a></li>
-                        <li>
-                            <a data-turbolinks="false" href="http://direitoreal.com.br/artigos">Artigos</a>
-                        </li>
-                        <li>
-                            <a data-turbolinks="false" href="http://direitoreal.com.br/noticias">Jurisprudência</a>
-                        </li>
-                        <li><a href="http://direitoreal.com.br/peticoes">Petições</a></li>
 
-                        <div class="areas-dropdown">
-                            <li>
+                <div class="collapse navbar-collapse justify-content-center align-items-center" id="navbarNavDropdown">
+                    <ul class="navbar-nav w-100 justify-content-between">
+                        <li class="nav-item">
+                            <a class="nav-link" href="http://direitoreal.com.br/plano-juridico-master">Planos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="http://direitoreal.com.br/cursos">Cursos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="http://direitoreal.com.br/professores">Professores</a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link" href="http://direitoreal.com.br/artigos">Artigos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="http://direitoreal.com.br/noticias">Jurisprudência</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="http://direitoreal.com.br/peticoes">Petições</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="http://direitoreal.com.br/faq">Contato</a>
+                        </li>
+                        <!-- ÁREA MOBILE -->
+                        <li class="nav-item dropdown d-block d-sm-block d-md-block d-lg-none d-xl-none">
+                            <a class="nav-link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                                aria-haspopup="true" aria-expanded="false">
                                 Áreas
-                                <b class="fa fa-chevron-down"></b>
-                            </li>
+                                <i class="fa fa-chevron-down"></i>
+                            </a>
 
-                            <ul class="ul-dropdown">
-                                <li><a href="http://direitoreal.com.br/areas/direito-constitucional">Direito
-                                        Constitucional</a></li>
-                            </ul>
+                            <div class="dropdown-menu p-2" aria-labelledby="navbarDropdownMenuLink">
+                                <a class="dropdown-item p-2 rounded" href="#">Direito Constitucional</a>
+                            </div>
+                        </li>
+                        <!-- ÁREA DESKTOP -->
+                        <li class="dropdown-desktop dropdown nav-item d-none d-sm-none d-md-none d-lg-block d-xl-block">
+                            <a class="nav-link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                                aria-haspopup="true" aria-expanded="false">
+                                Áreas
+                                <i class="fa fa-chevron-down"></i>
+                            </a>
+
+                            <div class="dropdown-menu dropdown-menu-right p-2" aria-labelledby="navbarDropdownMenuLink">
+                                <a class="bg-transparent dropdown-item p-3 rounded" href="#">Direito Constitucional</a>
+                            </div>
+                        </li>
+
+                        <li class="nav-item d-block d-sm-block d-md-block d-lg-none d-xl-none">
+                            <a class="nav-link" href="https://forum.direitoreal.com.br">Comunidade Jurídica</a>
+                        </li>
+
+                        <div class="border-top mt-2 d-block d-sm-block d-md-block d-lg-none d-xl-none">
+                            <a class="nav-link mt-2 rounded" href="http://direitoreal.com.br/login">Entrar</a>
+                            <a class="btn btn-outline-light mt-2"
+                                href="http://direitoreal.com.br/cadastro">Cadastrar</a>
                         </div>
                     </ul>
                 </div>
             </div>
-        </div>
+        </nav>
     </header>
+    
+
+    <!-- FOOTER -->
+    <footer class="mt-3">
+        <div class="bg-dark border-bottom">
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-12 col-md-6 col-lg-4 p-3 mt-3">
+                        <div class="footer-first-container text-white">
+                            <a href="/">
+                                <img src="assets/logo-white-fc4f0bc7658764edc2b526700431d61bd79c1036cb4f57459b9c062ecdd6c2d3.svg"
+                                    class="header-logo" alt="Direito Real" width="180" height="37">
+                            </a>
+                            <p class="mt-3">O Direito do consultivo e do contencioso.</p>
+                            <p>O Direito dos escritórios e dos tribunais.</p>
+                            <p>O Direito que o mercado profissional exige.</p>
+                            <p>O Direito na prática.</p>
+                            <p>O Direito Real.</p>
+                        </div>
+                    </div>
+
+                    <div class="col-sm-12 col-md-6 col-md-offset-1 col-lg-4 p-3 mt-3">
+                        <span class="text-uppercase text-warning"><h6 class="color-golden">Fale conosco</h6></span>
+
+                        <p class="text-muted mt-3"><i class="fa-regular fa-comments fa-2x color-golden"></i><a class="text-white ml-2"
+                                target="_blank" href="/faq">FAQ</a></p>
+                        <p class="text-muted "><i class="fa-brands fa-whatsapp fa-2x color-golden"></i><a class="text-white ml-2"
+                                target="_blank" href="https://api.whatsapp.com/send?phone=5521995172299">+55 21
+                                99517-2299</a></p>
+                        <p class="text-muted "><i class="fa-regular fa-envelope fa-2x color-golden"></i><a class="text-white careers ml-2"
+                                target="_blank"
+                                href="https://direitoreal.zendesk.com/hc/pt-br/requests/new">atendimento@direitoreal.com.br</a>
+                        </p>
+
+                        <ul class="w-75 d-flex align-items-center justify-content-between list-unstyled mt-3">
+                            <li class="d-flex align-items-center justify-content-center rounded-circle"><a href="https://www.facebook.com/InstitutodeDireitoReal/"
+                                    class="text-info" target="_blank" rel="noopener" aria-label="Facebook"><i
+                                        class="fab fa-facebook-f color-golden"></i></a></li>
+                            <li class="d-flex align-items-center justify-content-center rounded-circle"><a href="https://www.instagram.com/institutodedireitoreal/"
+                                    class="text-info" target="_blank" rel="noopener" aria-label="Instagram"><i
+                                        class="fab fa-instagram color-golden"></i></a></li>
+                            <li class=" d-flex align-items-center justify-content-center rounded-circle"><a
+                                    href="https://www.linkedin.com/company/instituto-de-direito-real/about/"
+                                    class="text-info" target="_blank" rel="noopener" aria-label="Linkedin"><i
+                                        class="fab fa-linkedin-in color-golden"></i></a></li>
+                            <li class="d-flex align-items-center justify-content-center rounded-circle"><a href="https://twitter.com/direitoreal_" class="text-info"
+                                    target="_blank" rel="noopener" aria-label="Twitter"><i
+                                        class="fab fa-twitter color-golden"></i></a></li>
+                            <li class="d-flex align-items-center justify-content-center rounded-circle"><a href="https://www.youtube.com/c/InstitutodeDireitoReal"
+                                    class="text-info" target="_blank" rel="noopener" aria-label="Youtube"><i
+                                        class="fab fa-youtube color-golden"></i></a></li>
+                        </ul>
+                    </div>
+
+                    <div class="col-sm-12 col-md-6 col-md-offset-1 col-lg-4 p-3 mt-3">
+                        <span class="text-uppercase text-warning"><h6 class="color-golden">newsletter</h6></span>
+                        <p class="mt-4 mb-2 text-white">Cadastre seu e-mail para receber doutrina e jurisprudência atualizadas
+                            diariamente.</p>
+
+                        <form class="new_newsletter" id="new_newsletter" action="/newsletters" accept-charset="UTF-8">
+                            <div class="input-group mb-3">
+                                <input type="text" class="form-control" placeholder="Insira seu melhor Email" aria-label="Insira seu melhor Email" aria-describedby="button-addon2">
+                                <div class="input-group-append">
+                                    <button class="bg-golden btn btn-outline-secondary" type="button" id="button-addon2"><i class="fa fa-chevron-right text-light"></i></button>
+                                </div>
+                            </div>
+                        </form>
+                        <div class="mb-3">
+                            <a target="_blank"
+                                href="https://br.jooble.org/vagas-de-emprego-advogado">Carreiras</a><br>
+                            <a target="_blank" href="/live">Lives</a>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+        <div class="bg-dark pt-3 pb-3">
+            <p class="text-center text-white">
+                &#169; 2023 Direito Real. Todos os direitos reservados. <a href="#" class="text-warning">Termos de Uso</a> | <a class="text-warning"
+                    href="#">Política de Privacidade</a>
+            </p>
+        </div>
+    </footer>
 
     <!-- SCRIPTS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
