--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
     
 
     <!-- FOOTER -->
-    <footer class="mt-3">
+    <footer class="fixed-bottom mt-3">
         <div class="bg-dark border-bottom">
             <div class="container">
                 <div class="row">
