--- a/perfil/lyonwittemar.html
+++ b/perfil/lyonwittemar.html
@@ -135,15 +135,17 @@
     <!-- PERFIL CONTENT -->
     <section class="perfil-content bg-light pb-2">
         <div class="container">
-            <div class="profile pt-3 position-relative">
-                <div class="cover-adv rounded-top">
-                    <img class="img-cover rounded-top" src="../assets/wallpaper.png" alt="Imagem de capa">
-                </div>
-                <div class="img-perfil-adv rounded-circle position-absolute col-6">
-                    <img class="rounded-circle img-thumbnail" src="../assets/perfil.png">
+            <div class="profile pt-3">
+                <div class="w-100 cover-profile position-relative">
+                    <div class="cover-adv rounded-top">
+                        <img class="img-cover rounded-top" src="../assets/wallpaper.png" alt="Imagem de capa">
+                    </div>
+                    <div class="img-perfil-adv rounded-circle position-absolute col-6">
+                        <img class="rounded-circle img-thumbnail" src="../assets/perfil.png">
+                    </div>
                 </div>
 
-                <div class="info-adv row mt-4 d-flex justify-content-between align-items-start border-bottom">
+                <div class="info-adv row d-flex justify-content-between align-items-start border-bottom pt-5">
                     <div class="datas-adv px-3 mb-4 col-12 col-sm-12 col-md-12 col-lg-6 col-xl-6">
                         <h5 class="text-dark">Dr. Lyon Wittemar</h5>
                         <p class="text-secondary mt-2">Advogado Criminalista com ênfase na área de redução de penas
@@ -161,8 +163,8 @@
                         </div>
                     </div>
 
-                    <div class="social-media px-3 col-12 col-sm-12 col-md-12 col-lg-6 col-xl-6">
-                        <span class="d-flex align-items-center mb-4">
+                    <div class="social-media px-3 pt-4 col-12 col-sm-12 col-md-12 col-lg-6 col-xl-6">
+                        <span class="d-flex align-items-center mb-4 mt-3">
                             <i class="fa-brands fa-square-facebook fa-2x facebook"></i>
                             <a href="http://www.facebook.com/lyonwittemar"
                                 class="text-secondary ml-2">www.facebook.com/lyonwittemar</a>
